solved profile spacing issue

--- a/src/Profile.css
+++ b/src/Profile.css
@@ -1,4 +1,4 @@
 #root{
     background: linear-gradient(90deg, rgba(253,126,29,1) 49%, rgba(252,105,50,1) 92%, rgba(180,60,58,1) 100%, rgba(252,176,69,1) 100%);
-    height: fit-content;
+    background-size: cover;
 }
